--- a/Day1/package.json
+++ b/Day1/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "Day1",
+  "name": "playwright-tutorial-day1",
   "version": "1.0.0",
-  "description": "",
+  "description": "Playwright Tutorial - Day 1: Getting Started",
   "main": "index.js",
   "scripts": {},
-  "keywords": [],
+  "keywords": [
+    "playwright",
+    "testing",
+    "e2e",
+    "getting-started"
+  ],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.18.3",
