Update Step name

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,4 +1,4 @@
-name: Playwright Tests - All Days
+name: Playwright Tutorial Tests
 on:
   push:
     branches: [ main, master ]
@@ -6,38 +6,38 @@ on:
     branches: [ main, master ]
 
 jobs:
-  detect-days:
+  detect-steps:
     runs-on: ubuntu-latest
     outputs:
-      days: ${{ steps.detect.outputs.days }}
+      steps: ${{ steps.detect.outputs.steps }}
     steps:
     - uses: actions/checkout@v4
-    - name: Detect Day folders with Playwright tests
+    - name: Detect Step folders with Playwright tests
       id: detect
       run: |
-        days=()
-        for dir in Day*/; do
+        steps=()
+        for dir in Step*/; do
           if [ -d "$dir" ] && [ -f "$dir/package.json" ] && [ -f "$dir/playwright.config.ts" ]; then
-            days+=("\"$dir\"")
+            steps+=("\"$dir\"")
           fi
         done
-        if [ ${#days[@]} -eq 0 ]; then
-          echo "days=[]" >> $GITHUB_OUTPUT
+        if [ ${#steps[@]} -eq 0 ]; then
+          echo "steps=[]" >> $GITHUB_OUTPUT
         else
-          printf -v joined '%s,' "${days[@]}"
-          echo "days=[${joined%,}]" >> $GITHUB_OUTPUT
+          printf -v joined '%s,' "${steps[@]}"
+          echo "steps=[${joined%,}]" >> $GITHUB_OUTPUT
         fi
-        echo "Detected days: [${joined%,}]"
+        echo "Detected steps: [${joined%,}]"
 
   test:
-    needs: detect-days
-    if: needs.detect-days.outputs.days != '[]'
+    needs: detect-steps
+    if: needs.detect-steps.outputs.steps != '[]'
     timeout-minutes: 60
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        day: ${{ fromJson(needs.detect-days.outputs.days) }}
+        step: ${{ fromJson(needs.detect-steps.outputs.steps) }}
     
     steps:
     - uses: actions/checkout@v4
@@ -49,25 +49,25 @@ jobs:
     - name: Install pnpm
       run: npm install -g pnpm
     
-    - name: Install dependencies for ${{ matrix.day }}
-      working-directory: ${{ matrix.day }}
+    - name: Install dependencies for ${{ matrix.step }}
+      working-directory: ${{ matrix.step }}
       run: pnpm install
     
-    - name: Install Playwright Browsers for ${{ matrix.day }}
-      working-directory: ${{ matrix.day }}
+    - name: Install Playwright Browsers for ${{ matrix.step }}
+      working-directory: ${{ matrix.step }}
       run: pnpm exec playwright install --with-deps
     
-    - name: Run Playwright tests for ${{ matrix.day }}
-      working-directory: ${{ matrix.day }}
+    - name: Run Playwright tests for ${{ matrix.step }}
+      working-directory: ${{ matrix.step }}
       run: pnpm exec playwright test
     
     - name: Set artifact name
       id: artifact-name
-      run: echo "name=$(echo '${{ matrix.day }}' | tr -d '/')" >> $GITHUB_OUTPUT
+      run: echo "name=$(echo '${{ matrix.step }}' | tr -d '/')" >> $GITHUB_OUTPUT
     
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
         name: playwright-report-${{ steps.artifact-name.outputs.name }}
-        path: ${{ matrix.day }}/playwright-report/
+        path: ${{ matrix.step }}/playwright-report/
         retention-days: 30
